--- a/src/main/java/Vistas/Clientes.form
+++ b/src/main/java/Vistas/Clientes.form
@@ -83,12 +83,12 @@
                           <Component id="jComboBox1" alignment="1" max="32767" attributes="0"/>
                           <Component id="TxtRFCCliente" alignment="1" max="32767" attributes="0"/>
                           <Component id="TxtCorreoCliente" alignment="1" max="32767" attributes="0"/>
-                          <Component id="TxtDirecCliente" alignment="1" max="32767" attributes="0"/>
                           <Component id="TxtTelCliente" alignment="1" max="32767" attributes="0"/>
                           <Component id="TxtIDCliente" max="32767" attributes="0"/>
-                          <Component id="TxtFechaRegistro" max="32767" attributes="0"/>
                           <Component id="TxtAmaterno" max="32767" attributes="0"/>
                           <Component id="TxtNombre" max="32767" attributes="0"/>
+                          <Component id="TxtDirecCliente" alignment="1" max="32767" attributes="0"/>
+                          <Component id="TxtFechaRegistro" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
                   </Group>
@@ -139,15 +139,15 @@
                       </Group>
                       <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="TxtDirecCliente" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TxtDirecCliente" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="TxtFechaRegistro" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="TxtFechaRegistro" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="BtnGuardar" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jButton13" alignment="3" min="-2" pref="27" max="-2" attributes="0"/>
@@ -294,9 +294,9 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TxtCorreoClienteActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JTextField" name="TxtDirecCliente">
+            <Component class="javax.swing.JTextField" name="TxtFechaRegistro">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TxtDirecClienteActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TxtFechaRegistroActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="TxtTelCliente">
@@ -322,22 +322,17 @@
                 <Property name="text" type="java.lang.String" value="ID cliente:"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JFormattedTextField" name="TxtFechaRegistro">
-              <Properties>
-                <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-                  <Format format="" subtype="-1" type="1"/>
-                </Property>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Segoe UI Light" size="14" style="0"/>
-                </Property>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JTextField" name="TxtAmaterno">
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TxtAmaternoActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="TxtNombre">
+            </Component>
+            <Component class="javax.swing.JTextField" name="TxtDirecCliente">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TxtDirecClienteActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
