--- a/src/main/java/Vistas/Ingredientes.form
+++ b/src/main/java/Vistas/Ingredientes.form
@@ -257,7 +257,7 @@
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="4">
-                    <StringItem index="0" value="Aceites esenciales"/>
+                    <StringItem index="0" value="A. esenciales"/>
                     <StringItem index="1" value="Fijadores"/>
                     <StringItem index="2" value="Alcoholes"/>
                     <StringItem index="3" value="Solventes"/>
@@ -398,7 +398,7 @@
                                   <Component id="TxtNombre_B" alignment="0" max="32767" attributes="0"/>
                                   <Component id="TxtNivel_B" alignment="0" max="32767" attributes="0"/>
                                   <Component id="jComboBox19" alignment="0" max="32767" attributes="0"/>
-                                  <Component id="jComboBox20" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="TxtProveedor_B" alignment="0" max="32767" attributes="0"/>
                                   <Component id="jComboBox21" alignment="0" max="32767" attributes="0"/>
                                   <Group type="102" alignment="1" attributes="0">
                                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -471,7 +471,7 @@
                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel61" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jComboBox20" alignment="3" max="32767" attributes="0"/>
+                          <Component id="TxtProveedor_B" alignment="3" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -575,7 +575,7 @@
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="4">
-                    <StringItem index="0" value="Aceites esenciales"/>
+                    <StringItem index="0" value="A. esenciales"/>
                     <StringItem index="1" value="Fijadores"/>
                     <StringItem index="2" value="Alcoholes"/>
                     <StringItem index="3" value="Solventes"/>
@@ -587,7 +587,7 @@
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jComboBox20">
+            <Component class="javax.swing.JComboBox" name="TxtProveedor_B">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI Light" size="14" style="0"/>
@@ -890,7 +890,7 @@
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="4">
-                    <StringItem index="0" value="Aceites esenciales"/>
+                    <StringItem index="0" value="A. esenciales"/>
                     <StringItem index="1" value="Fijadores"/>
                     <StringItem index="2" value="Alcoholes"/>
                     <StringItem index="3" value="Solventes"/>
@@ -1205,7 +1205,7 @@
                 </Property>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="4">
-                    <StringItem index="0" value="Aceites esenciales"/>
+                    <StringItem index="0" value="A. esenciales"/>
                     <StringItem index="1" value="Fijadores"/>
                     <StringItem index="2" value="Alcoholes"/>
                     <StringItem index="3" value="Solventes"/>
